--- a/back/.env.example
+++ b/back/.env.example
@@ -1,4 +1,4 @@
 PORT =  "3005"
 MONGO_URI =  "mongodb://127.0.0.1:27017/avatarcreate"
 
-UNIONSAVATARS_TOKEN = "1234567890"
+UNION_TOKEN = "1234567890"
