--- a/front/package.json
+++ b/front/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@react-three/fiber": "^8.13.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/three": "^0.152.0",
     "axios": "^1.3.3",
     "daisyui": "^2.50.2",
     "date-fns": "^2.29.3",
@@ -32,6 +34,7 @@
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1",
     "stream-to-blob": "^2.0.1",
+    "three": "^0.152.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
