--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@react-three/drei": "^9.68.3",
     "@react-three/fiber": "^8.13.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@tinymce/tinymce-react": "^4.3.0",
