update package.json engines

--- a/back/package.json
+++ b/back/package.json
@@ -74,5 +74,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "19.6.1",
+    "npm": "9.4.0"
   }
 }
