--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -30,6 +31,8 @@
     "@nestjs/swagger": "^6.3.0",
     "axios": "^1.4.0",
     "class-validator": "^0.14.0",
+    "faker": "^6.6.6",
+    "mongodb-memory-server": "^8.12.2",
     "mongoose": "^7.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -40,7 +43,8 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "29.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/mocha": "^10.0.1",
     "@types/node": "18.15.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
